# mids-officeqa-alpha

./: .dockerignore  .gitignore  Dockerfile  README.md  SUBMISSION.md  amber-manifest.json5  pyproject.toml  submission-template.json
.github/workflows/: publish.yml
src/: __init__.py  agent.py  corpus.py  executor.py  server.py
tests/: harness.py  score.py
