[project]
name = "purple-agent-officeqa"
version = "0.1.0"
description = "Purple agent for the OfficeQA AgentBeats benchmark: BM25 retrieval over the U.S. Treasury Bulletin corpus + gpt-5-mini reasoning."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"

dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "openai>=1.50.0",
    "rank-bm25>=0.2.2",
    "httpx>=0.28.1",
    "pydantic>=2.11.0",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
